# link-grabber

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
src/grab/: __init__.py  archive.py  cli.py  comprehend.py  detect.py  models.py  pack.py  utils.py
tasks/: TASK-001-build-link-grabber.md
tests/: test_detect.py
