[project]
name = "link-grabber"
version = "0.1.0"
description = "Turn XHS, Douyin, and WeChat links into agent-readable context packs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "markdownify>=1.2.0",
    "openai>=2.8.1",
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "typer>=0.20.0",
]

[project.scripts]
grab = "grab.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grab"]

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
